[gd_scene load_steps=2 format=3 uid="uid://3ofh51q0vhmg"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/conditionNode.gd" id="1"]

[node name="ConditionNode" type="GraphNode"]
offset_right = 300.0
offset_bottom = 110.0
title = "ConditionNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.647059, 0.937255, 0.67451, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 0.364706, 0.364706, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
vertical = true

[node name="Value1" type="LineEdit" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The property to set the value of."
placeholder_text = "Value"
metadata/last_value = ""

[node name="Operator" type="OptionButton" parent="BoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
item_count = 6
selected = 0
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "<"
popup/item_3/id = 3
popup/item_4/text = ">="
popup/item_4/id = 4
popup/item_5/text = "<="
popup/item_5/id = 5

[node name="Value2" type="LineEdit" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The value to set the property to.
Eg: Bob, 12, 0.5, false, etc."
placeholder_text = "Value"
metadata/last_value = ""

[node name="TrueLabel" type="ItemList" parent="."]
layout_mode = 2
mouse_filter = 2
auto_height = true
item_count = 1
item_0/text = "True"

[node name="FalseLabel" type="ItemList" parent="."]
layout_mode = 2
mouse_filter = 2
auto_height = true
item_count = 1
item_0/text = "False"

[node name="Value1Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Value2Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="text_changed" from="BoxContainer/Value1" to="." method="_on_value1_changed"]
[connection signal="item_selected" from="BoxContainer/Operator" to="." method="_on_operator_selected"]
[connection signal="text_changed" from="BoxContainer/Value2" to="." method="_on_value2_changed"]
[connection signal="timeout" from="Value1Timer" to="." method="_on_value1_timer_timeout"]
[connection signal="timeout" from="Value2Timer" to="." method="_on_value2_timer_timeout"]
